--- a/reservia.html
+++ b/reservia.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="reservia.png"/>  
+            <img src="reservia.png" width="99px" height="103px"/>  
         </div>
         
         <nav>
