--- a/reservia.html
+++ b/reservia.html
@@ -4,14 +4,14 @@
     <link href="https://fr.allfont.net/allfont.css?fonts=raleway-light" rel="stylesheet" type="text/css" />
     <title>RESERVIA</title>
     <meta charset="utf-8" />
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
     <script src="https://kit.fontawesome.com/5cec7a9b48.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
     <header>
         <div id="en-tete">
-            <img src="reservia.png" id="logo">  
+            <img src="images/reservia.png" id="logo">  
                 <nav class="menu">
                     <ul id="menus">
                         <li id="héber"><a href="#Hébergements">Hébergements</a></li>
@@ -212,7 +212,7 @@
                     <figcaption id="ha">Parc Longchamp</figcaption>
                 </a>
             </figure>
-            
+            i
             </div>
 
         </article>
