--- a/reservia.html
+++ b/reservia.html
@@ -153,7 +153,7 @@
                 </a>
         </figure>
 
-        <figure class="popul">
+        <figure class="popul2">
             <img src="images/creative.jpg"/>
                 <a href="#">
                     <figcaption id="ho">Au coeur de l'eau Chambres d'hôtes</figcaption>
@@ -162,7 +162,7 @@
                 </a>
         </figure>
 
-        <figure class="popul">
+        <figure class="popul3">
             <img src="images/zakaria.jpg"/>
                 <a href="#">
                     <figcaption id="ho">Hôtel Tout bleu et </br> Blanc</figcaption>
@@ -179,7 +179,7 @@
        
         <section id="Activités">
            
-            <h4>Activités à Marseille</h4>
+            <h5>Activités à Marseille</h5>
 
             <article id="Acti">
 
@@ -235,27 +235,27 @@
         <footer>
 
             <div class="bloc1">
-                <h3>A propos</h3>
+                <h4>A propos</h4>
             <ul>
-                <li><a href="#">Fonctionnement du site</a></li>
-                <li><a href="#">Conditions générales de vente</a></li>
-                <li><a href="#">Données et confidentialité</a></li>
+                <li><a class="foot" href="#">Fonctionnement du site</a></li>
+                <li><a class="foot" href="#">Conditions générales de vente</a></li>
+                <li><a class="foot" href="#">Données et confidentialité</a></li>
             </ul>
             </div> 
 
             <div class="bloc2"> 
-                <h3>Nos hébergements</h3>
+                <h4>Nos hébergements</h4>
             <ul>
-                <li><a href="#">Charte qualité</a></li>
-                <li><a href="#">Soumettre votre hôte</a></li>
+                <li><a class="foot" href="#">Charte qualité</a></li>
+                <li><a class="foot" href="#">Soumettre votre hôte</a></li>
             </ul>
             </div>
 
             <div class="bloc3">
-                <h3>Assistance</h3>
+                <h4>Assistance</h4>
             <ul>
-                <li><a href="#">Centre d'aide</a></li>
-                <li><a href="#"">Nous contacter</a></li>
+                <li><a class="foot" href="#">Centre d'aide</a></li>
+                <li><a class="foot" href="#"">Nous contacter</a></li>
             </ul>
             </div>
 
