--- a/reservia.html
+++ b/reservia.html
@@ -12,7 +12,7 @@
 <body>
     <div id="blocpage">
         <header>
-            <div id="en-tete">
+            <div id="entete">
                 <img src="images/reservia.png" id="logo"> 
                     <nav class="menu">
                         <ul id="menus">
@@ -31,7 +31,7 @@
         <div class="barre">
             <p class="point"><i class="fas fa-map-marker-alt"></i></p>
             <input type="search" id="search" placeholder="Marseille,France"/>
-            <button><a class="rech" href="#">Rechercher</button></a>
+            <button><a class="rech" href="#">Rechercher</a></br><i class="fas fa-search"></i></button>
         </div>
 
         <div class="ico">
@@ -75,9 +75,10 @@
 <div class="heberetaside">
 
     <aside>
-
+        <div class="populaire">
         <a href="images/Populaires"><h3>Les plus populaires</h3></a> 
             <p class="fleche"><i class="fas fa-chart-line"></i></p>
+        </div>
 
         <figure class="popul">
             <img src="images/emile.jpg"/>
