--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link href="https://fonts.googleapis.com/css2? famille =Raleway:wght@100&display=swap » rel="stylesheet">
     <title>RESERVIA</title>
     <meta charset="utf-8" />
-    <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <link rel="stylesheet" type="text/css" href="CSS/styles.css">
     <script src="https://kit.fontawesome.com/5cec7a9b48.js" crossorigin="anonymous"></script>
 </head>
 
