--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="preconnect » href="https://fonts.gstatic.com">
+    <html lang="fr">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2? famille =Raleway:wght@100&display=swap » rel="stylesheet">
     <title>RESERVIA</title>
     <meta charset="utf-8" />
@@ -78,7 +79,7 @@
         <a href="images/Populaires"><h3>Les plus populaires</h3></a> 
             <p class="fleche"><i class="fas fa-chart-line"></i></p>
         </div>
-
+        <div class="popu">
         <figure class="popul">
             <img src="images/emile.jpg"/>
                 <a href="#">
@@ -105,7 +106,7 @@
                         <p class="star2"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></p>
                 </a> 
         </figure>
-
+    </div>
     </section>
     
     <section id="hebergements">
