--- a/index.html
+++ b/index.html
@@ -41,24 +41,24 @@
                 <p class=filtre1>Filtres</p>
             </div>
 
-            <div class="eco1">
-                <div class="icone"><i class="fas fa-money-bill-wave" style="color:#0065FC"></i></div> 
+            <div class="eco1 eco-filters">
+                <div class="icone"><i class="fas fa-money-bill-wave fa-icone"></i></div> 
                 <a href="#"><p class="titres_filtres">Economique</p></a> 
             </div>
 
-            <div class="eco2">
-                <div class="icone"><i class="fas fa-child" style="color:#0065FC"></i></div>
+            <div class="eco2 eco-filters">
+                <div class="icone"><i class="fas fa-child fa-icone"></i></div>
                 <a href="#"><p class="titres_filtres">Familial</p></a> 
             </div>
 
 
-            <div class="eco3">
-                <div class="icone"><i class="fas fa-heart" style="color:#0065FC"></i></div>
+            <div class="eco3 eco-filters">
+                <div class="icone"><i class="fas fa-heart fa-icone"></i></div>
                 <a href="#"><p class="titres_filtres">Romantique</p></a>
             </div>
 
-            <div class="eco4">
-                <div class="icone"><i class="fas fa-dog" style="color:#0065FC"></i></div>
+            <div class="eco4 eco-filters">
+                <div class="icone"><i class="fas fa-dog fa-icone"></i></div>
                 <a href="#"><p class="titres_filtres">Animaux autorisés</p></a>
             </div>
 
