--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 <head>
-    <html lang="fr">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2? famille =Raleway:wght@100&display=swap » rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1"/>
@@ -233,7 +232,7 @@
                 </figure>
             </div>
             </article>
-
+            </div>
         </section>   
 
     </div>
