--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             <figure class="heberg">
                 <a href="#">
                 <img src="images/marcus.jpg" alt="auberge"/>
-                        <figcaption>Auberge de la Cannebière</figcaption>
+                        <p class="legende-heber">Auberge de la Cannebière</p>
                         <p class="prix">Nuit à partir de 25€</p>
                         <p class="star"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star un"></i></p>
                     </a>
@@ -134,7 +134,7 @@
             <figure class="heberg">
                 <a href="#">
                 <img src="images/fred.jpg" alt="hotel-port"/>
-                        <figcaption>Hôtel du Port</figcaption>
+                <p class="legende-heber">Hôtel du Port</p>
                         <p class="prix">Nuit à partir de 52€</p>
                         <p class="star"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></p>
                     </a>
@@ -143,7 +143,7 @@
             <figure class="heberg">
                 <a href="#">
                 <img src="images/reiset.jpg" alt="hotel-mouettes"/>
-                        <figcaption>Hôtel Les mouettes</figcaption>
+                <p class="legende-heber">Hôtel Les mouettes</p>
                         <p class="prix">Nuit à partir de 76€</p>
                             <p class="star"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star un"></i></p>
                     </a>
@@ -152,7 +152,7 @@
             <figure class="heberg">
                 <a href="#">
                 <img src="images/mer.jpg" alt="hotel-mer"/>
-                        <figcaption>Hôtel de la mer</figcaption>
+                <p class="legende-heber">Hôtel de la mer</p>
                         <p class="prix">Nuit à partir de 46€</p>
                             <p class="star"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star un"></i><i class="fas fa-star un"></i></p>
                     </a>
@@ -161,7 +161,7 @@
             <figure class="heberg">
                 <a href="#">
                 <img src="images/nicate.jpg" alt="auber"/>
-                        <figcaption>Auber Le Panier</figcaption>
+                <p class="legende-heber">Auber Le Panier</p>
                         <p class="prix">Nuit à partir de 23€</p>
                             <p class="star"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star un"></i></p>
                     </a>
@@ -170,8 +170,7 @@
             <figure class="heberg">
                 <a href="#">
                 <img src="images/febrian.jpg" alt="hotel-amina"/>
-                   
-                        <figcaption>Hôtel chez Amina</figcaption>
+                <p class="legende-heber">Hôtel chez Amina</p>
                         <p class="prix">Nuit à partir de 96€</p>
                             <p class="star"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></p>
                     </a>
