--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2? famille =Raleway:wght@100&display=swap » rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2? famille =Raleway:wght@100&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1"/>
     <title>RESERVIA</title>
     <meta charset="utf-8" />
@@ -31,7 +31,7 @@
         <div class="barre">
             <p class="point"><i class="fas fa-map-marker-alt"></i></p>
             <input type="search" id="search" placeholder="Marseille,France"/>
-            <button><a class="rech" href="#">Rechercher</a><i class="fas fa-search"></i></button>
+            <button><span class="rech" href="#">Rechercher</span><i class="fas fa-search"></i></button>
         </div>
 
         <div class="ico">
